--- a/.travis.yml
+++ b/.travis.yml
@@ -2,15 +2,20 @@ language: python
 python:
   - "3.5"
   - "3.6"
+  - "3.7-dev"
   - "nightly"
   - "pypy3"
-install:
-  - pip install -q flake8 isort
 script:
   - python -m unittest discover -v tests/ 'test_*.py'
-  - flake8 sniper/ tests/ examples/ setup.py
-  - isort --check-only --recursive sniper/ tests/ examples/ setup.py
-matrix:
-  allow_failures:
-    - python: nightly
-    - python: pypy3
+jobs:
+  include:
+    - stage: code check
+      name: flake8
+      python: 3.6
+      install: pip install -q flake8
+      script: flake8 .
+    - stage: code check
+      name: isort
+      python: 3.6
+      install: pip install -q isort
+      script: isort --check-only --recursive .
